Update placeholder text for better user experience

--- a/index.html
+++ b/index.html
@@ -113,10 +113,8 @@
 
           <!-- Content -->
           <p class="text-base mb-10 text-gray-200 md:text-right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-            reprehenderit delectus quasi eligendi maiores consectetur repellat
-            necessitatibus libero deleniti quaerat debitis, odit earum modi.
-            Magni porro iste dolores.
+            We're working hard to give you a better experience. Our website is
+            coming soon.
           </p>
 
           <!-- Social media -->
